# Ducktane

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AdsrEnvelope.h  FxChain.cpp  FxChain.h  Lfo.h  Oscillator.cpp  Oscillator.h  StateVariableFilter.cpp  StateVariableFilter.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
Source/Data/: LicenseManager.cpp  LicenseManager.h  PresetManager.cpp  PresetManager.h
Source/UI/: BrowserPanel.cpp  BrowserPanel.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  EnvelopePanel.cpp  EnvelopePanel.h  FilterPanel.cpp  FilterPanel.h  FxPanel.cpp  FxPanel.h  LfoPanel.cpp  LfoPanel.h  LicenseOverlay.cpp  LicenseOverlay.h  OscillatorPanel.cpp  OscillatorPanel.h  PresetPanel.cpp  PresetPanel.h  WaveformDisplay.cpp  WaveformDisplay.h
